tests/html_macro/list-fail.stderr
error: this opening fragment has no corresponding closing fragment
 --> tests/html_macro/list-fail.rs:5:13
  |
5 |     html! { <> };
  |             ^^

error: this opening fragment has no corresponding closing fragment
 --> tests/html_macro/list-fail.rs:6:15
  |
6 |     html! { <><> };
  |               ^^

error: this opening fragment has no corresponding closing fragment
 --> tests/html_macro/list-fail.rs:7:13
  |
7 |     html! { <><></> };
  |             ^^

error: this closing fragment has no corresponding opening fragment
  --> tests/html_macro/list-fail.rs:10:13
   |
10 |     html! { </> };
   |             ^^^

error: this closing fragment has no corresponding opening fragment
  --> tests/html_macro/list-fail.rs:11:13
   |
11 |     html! { </></> };
   |             ^^^

error: expected a valid html element
  --> tests/html_macro/list-fail.rs:14:15
   |
14 |     html! { <>invalid</> };
   |               ^^^^^^^

error: expected an expression following this equals sign
  --> tests/html_macro/list-fail.rs:16:17
   |
16 |     html! { <key=></> };
   |                 ^

error: the property value must be either a literal or enclosed in braces. Consider adding braces around your expression.
  --> tests/html_macro/list-fail.rs:18:18
   |
18 |     html! { <key="key".to_string()></key> };
   |                  ^^^^^^^^^^^^^^^^^

error: only a single `key` prop is allowed on a fragment
  --> tests/html_macro/list-fail.rs:21:30
   |
21 |     html! { <key="first key" key="second key" /> };
   |                              ^^^

error: fragments only accept the `key` prop
  --> tests/html_macro/list-fail.rs:23:14
   |
23 |     html! { <some_attr="test"></> };
   |              ^^^^^^^^^
